@@ -1,3 +1,7 @@
+2016-05-23  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* compress-pdf.sh: Better handling of filenames containing spaces.
+
 2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* COPYING: Created.
